# ai-research-agent

./: .env.example  .gitignore  01-technical-research-agent.md  README.md  modal_app.py  pyproject.toml
.github/workflows/: eval.yml  tests.yml
docs/: handoff-for-packaging-chat.md  project-context.md  writeup-outline.md
eval/: baseline.json  tasks.json
prompts/: plan.md  rank.md  read.md  synthesize.md
src/research_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  llm.py  memory.py  models.py  observability.py  prompts.py  render.py  state.py  streaming.py
src/research_agent/adapters/: arxiv.py  github.py  google_scholar.py  web_search.py
src/research_agent/eval/: dataset.py  judge.py  pairwise.py  regression.py  runner.py
src/research_agent/nodes/: plan.py  rank.py  read.py  search.py  synthesize.py  verify.py
tests/: test_eval.py  test_llm_parsing.py  test_memory.py  test_models.py  test_observability.py  test_pairwise.py  test_passk.py  test_regression.py  test_render.py  test_scholar.py  test_verify.py
web/: index.html
